--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,6 @@
 /**** dritarja ****************************************************************/
 
-#dritarja { width:600px; height:300px; background-color:black; color:white; }
+#dritarja { width:600px; height:300px; background-color:black; color:white; overflow-y:scroll; padding:10px;  }
 
 /**** fund dritarja ***********************************************************/
 
